css/resume.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300,700');

/************* GENERAL *************/
html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    overflow:hidden;
}

body {
    margin: 0;
    background-image: url('../images/DSC02837.JPG');
    background-attachment: fixed;
    background-size: cover;
    /* background-position: top center; */
    background-repeat: no-repeat;
    overflow:hidden;
}

section{
    font-family: 'Open Sans', sans-serif;
    color: #2E2E2E;
    display: block;
    border: 0px 0px 0px 0px;
    z-index: -1;
}

section h3{
    width: 100%;
    padding: 40px 0px;
}

.dark-line {
    width: 600px;
    height: 0.5px;
    margin-top: 20px;
    margin-bottom: 15px;
    background-color: #2E2E2E;
    margin: 0 auto;
    opacity:0.2;
}

.italic-quote{
    font-size: 10px;
    color: grey;
    text-align:center;
}

/* Responsive bit for general */
@media only screen and (max-width: 320px) {
    body, section {
        display: block;
        margin: 0;
    }
}

/**********************************/
/************ NAVBAR **************/
/**********************************/
.fixed-navbar {
    top: 0px;
    z-index: 100;
    position: fixed;
    width: 100%;
}

/*when smaller screen size*/
.fixed-navbar_min {
    top: 0px;
    z-index: 100;
    position: fixed;
    width: 100%;
}

.nav_links {
    margin: 0 auto;
    font-family: 'Open Sans Condensed', sans-serif;
    display:block;
    text-align:center;
    color: #2E2E2E;
    left: -15%;
    background-color: #ffffff;
    opacity: 0.8;
    border-radius: 0px;
    margin-bottom: 0;
    height: 75px;
}

.nav_links .active {
    color: #4a99c2;
    text-decoration: none;
}

.nav_links li {
    margin-top: 25px;
    margin-right: 5px;
    display: inline-block;
}

.nav_links li:hover{
    -webkit-animation-name: hoverscale;
    animation-name: hoverscale;
    animation-duration: 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.nav_links li a {
    padding: 0 25px;
    color: #2E2E2E;
    text-decoration: none;
}

.nav_links li a:hover {
    color: #4a99c2;
}

.handle{
    font-family: 'Open Sans Condensed', sans-serif;
    width: 100%;
    background: #FFFFFF;
    opacity:0.7;
    text-align: left;
    box-sizing: border-box;
    padding: 10px;
    cursor: pointer;
    display: none;
}

@media screen and (max-width: 550px) {
    .nav_links{
        display:none;
    }

    .nav_links li {
        margin: 0 auto;
        display: block;
        margin-top: 0px;
        margin-left: -5px;
        padding-top: 25px;
    }

    .handle{
        display: block;
    }

    .handle b{
        margin-left: 10px;
    }

    .show{
        display:block;
        text-align:center;
        color: #2E2E2E;
        left: -15%;
        background-color: #ffffff;
        opacity: 0.8;
        border-radius: 0px;
        margin-bottom: 0;
        height: 250px;
        opacity: 1;
    }

    .fixed-navbar{
        top:40px;
    }

}

/**********************************/
/************ SECTIONS ************/
/**********************************/
/*Title*/
.section1{
    height: 700px;
    background-image: url('../images/DSC02837.JPG');
    background-attachment: fixed;
    background-size: cover;
    height:100vh;
    overflow:hidden;
}

/*About*/
.section2{
    height: 800px;
    background-color: #FFFFFF;
}

/*Experience*/
.section3{
    height: 1550px;
    background-color: #c2d3da;
}

/*Skill*/
.section4{
    height: 900px;
    position:relative;
    margin:0 auto;
    overflow:hidden;
}

/*Project*/
.section5{
    height: 800px;
    background-color: #FFFFFF;
}

/*Contact*/
.section6{
    height: 500px;
    background-color: #0f1f30;
}

/*Changing height of each section*/
/*FOR SMALLER OR MOBILE VIEW*/
@media screen and (max-width: 440px) {
    .section1{
        height: 800px;
    }
    .section1 h1{
        word-wrap: break-word;
    }
    .section3{
        height: 1600px;
    }
    .section4{
        height: 1000px;
    }
    .section5{
        height: 1200px;
    }
    .section6{
        height: 525px;
    }
}
@media (max-width: 400px) {
    .section1{
        height: 800px;
    }
    .section2{
        height: 1300px;
    }
    .section3{
        height: 2200px;
    }
    .section4{
        height: 1000px;
    }
    .section5{
        height: 1200px;
    }
    .section6{
        height: 525px;
    }
}

@media screen and (min-width: 440px) and (max-width: 775px) {
    .section1{
       height: 700px;
    }
    .section2{
          height: 1200px;
    }
    .section3{
      height: 1800px;
    }
    .section4{
        height: 900px;
    }

    .section5{
      height: 1400px;
    }
    .section5 h3{ padding:0px 0px !important; }
    .section6{
      height: 500px;
    }
}

@media screen and (min-width: 775px) and (max-width: 1000px) {
    .section3{
      height: 2000px;
    }

    .section4{
        height: 850px;
    }
    .section5{
      height: 800px;
    }
}

/**********************************/
/************* TITLE **************/
/**********************************/
.section1 h1{
    margin-top: 50px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    font-size: 75px;
    color: #FFFFFF;
    text-align: center;
    letter-spacing: 5px;
      text-shadow: 0px 0px 5px #5a8ba4;
}

.title-line {
    width: 700px;
    height: 1px;
    margin-top: 20px;
    margin-bottom: 15px;
    background-color: #FFFFFF;
    margin: 0 auto;
    opacity:0.5;
}

.section1 p{
    text-align: center;
    color: #051220;
    padding-top: 15px;
    margin-bottom: 25%;
    text-shadow: 0px 0px 5px #fff;
}
/* ... */

